--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,7 +3,7 @@
   --black: #000000;
   --very-light-pink: #c7c7c7;
   --text-input-field: #f7f7f7;
-  --hospital-green: #acd9b2;
+  --hospital-green: #f70c0c;
   --sm: 14px;
   --md: 16px;
   --lg: 18px;
@@ -89,6 +89,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: var(--white);
 }
 
 .desktop-menu {
@@ -98,18 +99,29 @@ nav {
   width: 100px;
   height: auto;
   border: 1px solid var(--very-light-pink);
+  background-color: var(--white);
   border-radius: 6px;
   padding: 20px 20px 0 20px;
+  z-index: 2;
 }
 
 .desktop-menu ul {
   list-style: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .desktop-menu ul li {
   text-align: end;
+  transition: all 300ms;
+}
+
+.desktop-menu ul li:hover {
+  transform: scale(1.1);
+  color: var(--hospital-green);
 }
 
 .desktop-menu ul li:nth-child(1),
@@ -166,7 +178,7 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 12px;
+  margin-top: 5px;
 }
 
 .product-info figure {
@@ -176,6 +188,11 @@ nav {
 .product-info figure img {
   width: 35px;
   height: 35px;
+  transition: transform 300ms ease-in-out;
+}
+
+.product-info figure img:hover {
+  transform: scale(1.1);
 }
 
 .product-info div p:nth-child(1) {
@@ -287,8 +304,86 @@ nav {
   height: 50px;
 }
 
+
+.product-detail-article {
+  width: 100%;
+  background-color: var(--white);
+  width: 400px;
+  position: absolute;
+  right: 0;
+  z-index: 2;
+  padding-bottom: 24px;
+}
+
+.product-detail-article-close {
+  background: var(--white);
+  width: 14px;
+  height: 14px;
+  position: absolute;
+  top: 24px;
+  left: 24px;
+  z-index: 2;
+  padding: 12px;
+  border-radius: 50%;
+}
+
+.product-detail-article:hover {
+  cursor: pointer;
+}
+
+.product-detail-article > img:nth-child(2) {
+  width: 100%;
+  height: 360px;
+  object-fit: cover;
+  border-radius: 0 0 20px 20px;
+}
+
+.product-detail-article-info {
+  margin: 24px 24px 0 24px;
+}
+
+.product-detail-article-info p:nth-child(1) {
+  font-weight: bold;
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+
+.product-detail-article-info p:nth-child(2) {
+  color: var(--very-light-pink);
+  font-size: var(--md);
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+
+.product-detail-article-info p:nth-child(3) {
+  color: var(--very-light-pink);
+  font-size: var(--sm);
+  margin-top: 0;
+  margin-bottom: 36px;
+}
+
+.primary-button {
+  background-color: var(--hospital-green);
+  border-radius: 8px;
+  border: none;
+  color: var(--white);
+  width: 100%;
+  cursor: pointer;
+  font-size: var(--md);
+  font-weight: bold;
+  height: 50px;
+}
+
+.add-to-cart-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (max-width: 640px) {
-  .product-detail {
+  .product-detail,
+  .product-detail-article {
     width: 100%;
   }
 
