--- a/src/scss/ui/contenido/_detail.scss
+++ b/src/scss/ui/contenido/_detail.scss
@@ -2,35 +2,42 @@
 @use 'base/mixins' as m;
 
 .detail {
-  padding: 1rem 20rem;
-  @include m.tablet {
-    &__grid {
+  @include m.desktop {
+    padding: 1rem 20rem;
+  }
+
+  &__grid {
+    @include m.desktop {
       @include m.grid(4, 2rem);
       align-items: center;
     }
+  }
 
-    &__contenido-img {
-      grid-column: 1 / 3;
-    }
+  &__image {
+    width: 100%;
+    border-radius: 2rem;
+  }
 
-    &__image {
-      width: 100%;
-      border-radius: 2rem;
-    }
+  &__title {
+    font-weight: 400;
+    font-size: 3.5rem;
+  }
 
-    &__title {
-      font-weight: 400;
-      font-size: 3.5rem;
-    }
+  &__price {
+    font-weight: bold;
+    font-size: 4.5rem;
+  }
 
-    &__price {
-      font-weight: bold;
-      font-size: 4.5rem;
-    }
-
-    &__description {
+  &__description {
+    @include m.desktop {
       grid-column: 3 / 6;
       padding-left: 4rem;
+    }
+  }
+
+  &__contenido-img {
+    @include m.desktop {
+      grid-column: 1 / 3;
     }
   }
 }
@@ -64,8 +71,12 @@
 
 .characteristics {
   width: 100%;
-  @include m.grid(3, 2rem);
+  @include m.grid(1, 2rem);
   margin-bottom: 2rem;
+
+  @include m.desktop {
+    @include m.grid(3, 2rem);
+  }
 
   &__contenido {
     display: flex;
