--- a/src/scss/ui/contenido/_main.scss
+++ b/src/scss/ui/contenido/_main.scss
@@ -1,4 +1,5 @@
 @use 'base/variables' as v;
+@use 'base/mixins' as m;
 
 .main {
   bottom: 4.6rem;
@@ -7,5 +8,9 @@
   position: absolute;
   right: 0;
   top: 6rem;
-  padding: 2rem 0;
+  padding-top: 1rem;
+
+  @include m.desktop {
+    padding: 2rem 0;
+  }
 }
